tests/snapshots/e2e__check_permissions@step-if-guard.snap
---
source: tests/e2e.rs
expression: out
---
permissions  1 finding  (1 medium)

  !  medium  implicit-repo-default
  .github/workflows/ci.yml

    entry-point workflow `.github/workflows/ci.yml` declares no `permissions:` and jobs [combined, step-only, unconditional] inherit the repository default
