tests/snapshots/e2e__check_permissions@zizmor-findings.snap
---
source: tests/e2e.rs
expression: out
---
permissions  1 finding  (1 high)

  X  high  overly-broad-coarse
  .github/workflows/pr-target.yml

    entry-point workflow `.github/workflows/pr-target.yml` declares `permissions: write-all` at the workflow level
