tests/snapshots/e2e__dedup_markdown@actionlint-findings.snap
---
source: tests/e2e.rs
expression: out
---
### Near-duplicate workflows

No near-duplicate workflow clusters found at threshold `0.80`.
