tests/snapshots/e2e__dedup_markdown@composite-annotations.snap
---
source: tests/e2e.rs
expression: out
---
### Near-duplicate workflows

1 workflow cluster found at threshold `0.80`.

| Cluster | Representative | Members | Triggers differ |
|---|---|---:|---|
| #0 | `.github/workflows/manifest-target.yml` | 2 | true |
