tests/snapshots/e2e__dump@composite-invokes-composite.snap
---
source: tests/e2e.rs
expression: projection
---
{
  "actions": [
    {
      "id": ".github/actions/fetch-deps",
      "kind": "composite"
    },
    {
      "id": ".github/actions/setup-toolchain",
      "kind": "composite"
    }
  ],
  "externals": [
    {
      "gitref": "v4",
      "owner": "actions",
      "repo": "cache",
      "subpath": null
    },
    {
      "gitref": "v4",
      "owner": "actions",
      "repo": "checkout",
      "subpath": null
    }
  ],
  "schema_version": 10,
  "workflows": [
    {
      "id": ".github/workflows/ci.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "build",
          "step_uses_kinds": [
            "external",
            "localaction"
          ]
        }
      ],
      "name": "CI",
      "triggers": [
        "push"
      ]
    }
  ]
}
